--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 .card{
     text-align: center;
     margin: 10px;
+    font-family: 'Oswald', sans-serif;
 }
 .body{
     background-color: rgba(249, 240, 228, 0.259);
